# short-url/docs/swagger.json
@@ -1,13 +1,12 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server Petstore server.",
-        "title": "Swagger Example API",
-        "termsOfService": "http://swagger.io/terms/",
+        "description": "This is a sample in go tutorial for building a short URL service",
+        "title": "Simple Short URL API Server",
         "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
+            "name": "Leon Lin",
+            "url": "github.com/leon123858",
+            "email": "a0970785699@gmail.com"
         },
         "license": {
             "name": "Apache 2.0",
@@ -15,47 +14,103 @@
         },
         "version": "1.0"
     },
-    "host": "petstore.swagger.io",
-    "basePath": "/v2",
+    "host": "127.0.0.1:8080",
+    "basePath": "/",
     "paths": {
-        "/community/getCommunityList": {
-            "get": {
-                "description": "切換社區, 選擇社區用",
-                "tags": [
-                    "community"
+        "/shorten": {
+            "post": {
+                "description": "Create a new short URL for a given long URL",
+                "consumes": [
+                    "application/json"
                 ],
-                "summary": "獲取用戶擁有的社區列表",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "URLs"
+                ],
+                "summary": "Create short URL",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "用戶 firebase id",
-                        "name": "userId",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "社區 id, 用來篩選特定社區, 測權限用的, 無權限回傳空陣列",
-                        "name": "communityId",
-                        "in": "query"
+                        "description": "URL to be shortened",
+                        "name": "url",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/url.ShortenRequest"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Short URL",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
+                            "type": "string"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Invalid request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
                         "schema": {
                             "type": "string"
                         }
                     }
+                }
+            }
+        },
+        "/{token}": {
+            "get": {
+                "description": "Get the long URL for a given short URL token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "URLs"
+                ],
+                "summary": "Get long URL",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Short URL token",
+                        "name": "token",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "302": {
+                        "description": "Redirect to long URL",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "URL not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "url.ShortenRequest": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
                 }
             }
         }
